<resources>
    <string name="app_name">ThirdHomeTask</string>
    <string name="main">Main</string>
    <string name="settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_fragment">Main Fragment</string>
    <string name="settings_fragment">Settings Fragment</string>
    <string name="minus_two">Minus two</string>
    <string name="button"><![CDATA[Button >]]></string>
    <string name="more"><![CDATA[Подробнее >]]></string>
    <string name="_2">2</string>
    <string name="sign">-</string>
    <string name="celsius">°C</string>
    <string name="frame_text">ИКВ 41</string>
    <string name="iweather">i-Weather</string>
    <string name="sun">Sun</string>
    <string name="location_access_required">The app needs access to your location for determine your city name.</string>
    <string name="ok">OK</string>
    <string name="location_permission_granted">Location permission granted</string>
    <string name="location_access_denyed">Location access denyed. Unfortunately, the app can\'t to determine your city name. For grant location permission swape down.</string>
    <string name="launch_activity">Launch activity</string>
    <string name="location_unknown">Location unknown</string>
    <string name="location_updates_label">Location Updates</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="request_location_updates">Request location updates</string>
    <string name="remove_location_updates">Remove location updates</string>
    <string name="location_updated">Location Updated: %1$s</string>
    <string name="on_gps">Do you want to turn on gps?</string>
    <string name="no">NO</string>
    <string name="no_name_city">Swipe down to Refresh</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="location">"Location: "</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="yes">YES</string>
</resources>